# vbs

./: .cproject  .project  AUTHOR  AUTHORS  BUGS  CHANGES  ChangeLog  INSTALL  MAINTAINERS  Makefile  Makefile.am  Makefile.in  README  TODO  autogen.sh  config.h  config.h.in  configure  configure.ac  edit.c  edit.h  export.c  export.h  gui.c  import.h  keyboard.c  keyboard.h  main.h  menu.c  vbs-1.0.spec  vbs-2.0.spec  vbs-2.1.spec  vbs.desktop.template  vbs.nsis.in  vbs.spec.in
common/: Makefile  Makefile.am  Makefile.in  cfg.c  cfg.h  common.h  config.c  config.h  error.c  error.h  menu.c  menu.h  network.c  network.h  util-win.c  util-win.h  util.c  util.h  windows.c  windows.h
help/: Makefile.am  title.txt
help/docbook/: bg_BG.xml  en_GB.xml  en_US.xml  ru_RU.xml
po/: LINGUAS  Makefile.in  POTFILES.in  Rules-exe  bg_BG.po  en_GB.po  en_US.po  ru_RU.po  vbs.pot
po/bg_BG/: vbs-help.mo  vbs.po
po/en_GB/: vbs-help.mo  vbs.po
po/en_US/: vbs-help.mo  vbs.po
po/ru_RU/: vbs-help.mo  vbs.po
utils/: submerge.pl
vbsc/: Makefile  Makefile.am  Makefile.in  menu-def.h  menu.c  menu.h  menu2.c  menu2.h  vbs.h  vbsc.c  vbsc.desktop.in  vbsc.h
vbsd/: Makefile  Makefile.am  Makefile.in  server.c  server.h  vbsd  vbsd.c  vbsd.h
vbsd/init/: vbsd.in  vbsd.service.in
vbsm/: Makefile  Makefile.am  Makefile.in  edit.c  edit.h  export.c  export.h  gui.c  gui.h  import.c  import.h  keyboard.c  keyboard.h  main.h  menu-def.h  menu.c  menu.h  mouse.c  mouse.h  vbs.c  vbs.h  vbsm.c  vbsm.desktop.in  vbsm.desktop.template  vbsm.h  video-gstreamer.c  video-gstreamer.h  video-mplayer.c  video-mplayer.h  video-vlc.c  video-vlc.h  video.c  video.h
vbss/: Makefile  Makefile.am  Makefile.in  gui.c  gui.h  keyboard.c  keyboard.h  keys.c  keys.h  network.c  network.h  vbss-threaded.c  vbss.c  vbss.desktop.in  vbss.desktop.template  vbss.h
